@@ -298,8 +298,12 @@ sub dist_ini_meta_ok {
 
 lsub unrecommend => sub {
   [
-    qw( Path::Class Path::Class::File Path::Class::Dir JSON JSON::XS JSON::Any Path::IsDev Path::FindDev ),
-    qw( File::ShareDir::ProjectDistDir File::Find File::Find::Rule ),
+    qw( Path::Class Path::Class::File Path::Class::Dir ),    # Path::Tiny preferred
+    qw( JSON JSON::XS JSON::Any ),                           # JSON::MaybeXS preferred
+    qw( Path::IsDev Path::FindDev ),                         # Ugh, this is such a bad idea
+    qw( File::ShareDir::ProjectDistDir ),                    # Whhhy
+    qw( File::Find File::Find::Rule ),                       # Path::Iterator::Rule is much better
+    qw( Class::Load ),                                       # Module::Runtime preferred
   ];
 };
 
